# coheara

./: .env.example  .gitignore  AUDIT.md  BUILD.md  INVARIANTS.md  LICENSE  README.md  audit.ps1  audit.sh  build.ps1  build.sh  dev.ps1  dev.sh  diagnostic_sync.sh  package-lock.json  package.json  setup-keys.sh  setup-medgemma.sh  setup-wsl-build.sh  tsconfig.json  vite.config.ts  vitest.config.ts
AMD/: AMD-GPU-SETUP.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: dose_ranges.json  medical_wordlist.txt  medication_aliases.json
src-tauri/resources/app_migrations/: 001_device_registry.sql
src-tauri/resources/invariants/: allergen_aliases.json  allergen_cross_reactivity.json  cross_reactivity.json  drug_families.json  interaction_pairs.json  monitoring_schedules.json
src-tauri/resources/migrations/: 001_initial.sql  002_device_pairing.sql  003_sync_versions.sql  004_coherence_alerts.sql  005_audit_log.sql  006_vector_chunks.sql  007_model_preferences.sql  008_pipeline_status.sql  009_grounded_tables.sql  010_batch_extraction.sql  011_dismissed_suggestions.sql  012_ocr_model_preference.sql  013_conversation_sync.sql  014_audit_profile.sql  015_extraction_source_quote.sql  016_local_ca.sql  017_model_capability_tags.sql  018_model_enabled.sql  019_butler_v2.sql  020_document_page_count.sql  021_screening_records.sql  022_vital_source_extracted.sql  023_allergen_category.sql
src-tauri/resources/mobile-apk/: .gitignore
src-tauri/resources/mobile-pwa/: .gitignore
src-tauri/src/: appointment.rs  authorization.rs  butler_service.rs  chat.rs  chat_queue.rs  chat_queue_worker.rs  config.rs  core_state.rs  device_manager.rs  distribution.rs  hardware.rs  home.rs  import_queue.rs  import_queue_worker.rs  journal.rs  lib.rs  local_ca.rs  main.rs  me.rs  medications.rs  ollama_service.rs  pairing.rs  pipeline_config.rs  review.rs  session_cache.rs  sync.rs  time_estimation.rs  timeline.rs  tls_cert.rs  trust.rs  wifi_transfer.rs
src-tauri/src/api/: error.rs  mod.rs  router.rs  server.rs  types.rs  websocket.rs
src-tauri/src/api/endpoints/: alerts.rs  appointments.rs  auth.rs  chat.rs  documents.rs  health.rs  home.rs  journal.rs  labs.rs  medications.rs  mod.rs  profiles.rs  sync.rs  timeline.rs
src-tauri/src/api/middleware/: audit.rs  auth.rs  mod.rs  nonce.rs  rate.rs
src-tauri/src/commands/: ai_setup.rs  allergy.rs  appointment.rs  chat.rs  coherence.rs  companion_access.rs  devices.rs  distribution.rs  extraction.rs  home.rs  import.rs  import_queue.rs  journal.rs  me.rs  medications.rs  mobile_api.rs  mod.rs  pairing.rs  profile.rs  review.rs  state.rs  sync.rs  timeline.rs  transfer.rs  trust.rs
src-tauri/src/crypto/: encryption.rs  keys.rs  mod.rs  phi_audit.rs  profile.rs  recovery.rs  secure_delete.rs
src-tauri/src/db/: app_db.rs  mod.rs  repository.rs  sqlite.rs
src-tauri/src/db/repository/: alert.rs  allergy.rs  audit.rs  cached_explanation.rs  consistency.rs  conversation.rs  device_registry.rs  diagnosis.rs  document.rs  document_search.rs  entity_connection.rs  lab_result.rs  medication.rs  mod.rs  preference.rs  procedure.rs  professional.rs  profile_trust.rs  referral.rs  screening_record.rs  symptom.rs  vital_sign.rs
src-tauri/src/intelligence/: detection.rs  emergency.rs  engine.rs  helpers.rs  invariant_bridge.rs  messages.rs  mod.rs  reference.rs  store.rs  types.rs
src-tauri/src/invariants/: allergens.rs  blood_types.rs  demographics.rs  enrich.rs  labs.rs  loader.rs  mod.rs  screening.rs  types.rs  vitals.rs
src-tauri/src/models/: alert.rs  allergy.rs  appointment.rs  cached_explanation.rs  caregiver.rs  conversation.rs  diagnosis.rs  document.rs  entity_connection.rs  enums.rs  filters.rs  lab.rs  medication.rs  mod.rs  procedure.rs  professional.rs  profile.rs  referral.rs  symptom.rs  vital_sign.rs
src-tauri/src/pipeline/: diagnostic.rs  domain_contracts.rs  hardware_advisor.rs  mod.rs  model_router.rs  processor.rs  prompt_templates.rs  quality_gate.rs  strategy.rs  stream_guard.rs
src-tauri/src/pipeline/batch_extraction/: analyzer.rs  background.rs  context.rs  dispatch.rs  duplicate.rs  error.rs  extractors.rs  mod.rs  runner.rs  scheduler.rs  store.rs  traits.rs  types.rs  verifier.rs
src-tauri/src/suggestions/: appt_provider.rs  doc_provider.rs  lab_provider.rs  med_provider.rs  mod.rs  symptom_provider.rs
src-tauri/src/timeline/: aggregates.rs  correlations.rs  fetch.rs  mod.rs  types.rs
src-tauri/src/trust/: backup.rs  dose.rs  emergency.rs  erasure.rs  fs_helpers.rs  mod.rs  recovery.rs
(+709 files in other folders)
