[package]
name = "coheara"
version = "0.4.0"
edition = "2021"
rust-version = "1.80"
description = "Coheara — Patient's Personal MedAI"

[lib]
name = "coheara_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl", "chrono", "uuid"] }
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
bip39 = "2"
base64 = "0.22"
tempfile = "3"
img_hash = "3"
tauri-plugin-dialog = "2"
# Explicit image v0.23 dep to enable format decoders for img_hash's re-export
image = { version = "0.23", default-features = false, features = ["jpeg", "png", "tiff"] }
# R3: PDF page rendering via Google PDFium — renders any PDF page to PNG for vision OCR.
# default-features=false avoids image_latest (0.25) conflicting with our image 0.23 pin.
# pdfium_latest provides pre-generated FFI bindings (no libclang needed).
pdfium-render = { version = "0.8", default-features = false, features = ["image_023", "pdfium_latest", "thread_safe"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
ort = { version = "2.0.0-rc.11", features = ["download-binaries", "ndarray"], optional = true }
ndarray = { version = "0.17", optional = true }
tokenizers = { version = "0.20", default-features = false, features = ["onig"], optional = true }
regex = "1"
printpdf = "0.7"
axum = { version = "0.7", features = ["multipart", "ws"] }
futures-util = "0.3"
qrcode = "0.14"
local-ip-address = "0.6"
tar = "0.4"
flate2 = "1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
rcgen = "0.13"
tauri-plugin-updater = "2"
tower-http = { version = "0.5", features = ["fs", "set-header", "cors"] }
tower = { version = "0.4", features = ["util"] }
mime_guess = "2"

[dev-dependencies]
http-body-util = "0.1"
tokio-tungstenite = "0.24"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]
onnx-embeddings = ["ort", "ndarray", "tokenizers"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
